Add clerk authetication

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
 DATABASE_URL=postgresql://neon....
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_dW5pZmllZC10cm91dC0yMS5jbGVyay5hY2NvdW50cy5kZXYk
+CLERK_SECRET_KEY=sk_test_2MAmsEqJi12ceqZSwlayLcRkKS4UFHdRf7vmUenBiT
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_REDIRECT_URL=/
+NEXT_PUBLIC_CLERK_SIGN_UP_FALLBACK_REDIRECT_URL=/
 # NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Y29v....
 # CLERK_SECRET_KEY=sk_test_UmdZSq...
 # NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
