--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.31.5",
     "@prisma/client": "^6.14.0",
     "next": "15.5.0",
     "react": "19.1.0",
